Update all URLs to production

--- a/backend/public/dashboard/analytics.html
+++ b/backend/public/dashboard/analytics.html
@@ -90,7 +90,7 @@
         if (companyName) {
             document.getElementById('companyName').textContent = companyName;
         }
-        window.API_URL = 'http://localhost:3000';
+        window.API_URL = 'https://renovation-ai-production.up.railway.app';
 
         async function loadAnalytics() {
             try {
