--- a/backend/public/dashboard/register.html
+++ b/backend/public/dashboard/register.html
@@ -190,7 +190,7 @@
     </div>
 
     <script>
-        const API_URL = 'http://localhost:3000';
+        const API_URL = 'https://renovation-ai-production.up.railway.app';
 
         document.getElementById('registerForm').addEventListener('submit', async (e) => {
             e.preventDefault();
