--- a/backend/public/widget/widget.html
+++ b/backend/public/widget/widget.html
@@ -133,7 +133,7 @@
 
     <script>
         window.COMPANY_ID = window.RENOVATION_VISION_COMPANY_ID || 'demo_company';
-        window.API_URL = 'http://localhost:3000';
+        window.API_URL = 'https://renovation-ai-production.up.railway.app';
     </script>
     <script src="widget.js"></script>
 </body>
