--- a/backend/public/dashboard/index.html
+++ b/backend/public/dashboard/index.html
@@ -128,7 +128,7 @@
             document.getElementById('companyName').textContent = companyName;
         }
 
-        window.API_URL = 'http://localhost:3000';
+        window.API_URL = 'https://renovation-ai-production.up.railway.app';
         
         // Initialize dashboard
         loadDashboard();
