--- a/backend/public/dashboard/login.html
+++ b/backend/public/dashboard/login.html
@@ -171,7 +171,7 @@
     </div>
 
     <script>
-        const API_URL = 'http://localhost:3000';
+        const API_URL = 'https://renovation-ai-production.up.railway.app';
 
         document.getElementById('loginForm').addEventListener('submit', async (e) => {
             e.preventDefault();
